# www/routes/api.php
@@ -11,7 +11,11 @@ Route::post('api-key/create', [ApiKeyController::class, 'store']);
 // дальше всё только с апи ключом
 Route::middleware(['api.key'])->group(function () {
 
-    Route::get('/organizations/by-activity-name/{name}', [OrganizationController::class, 'getByActivityName']);
-    Route::apiResource('organization', OrganizationController::class)->only('show');
+    Route::post('/organization/by-name', [OrganizationController::class, 'getByName']);
+    Route::get('/organization/by-activity-name/{name}', [OrganizationController::class, 'getByActivityName']);
+    Route::apiResource('organization', OrganizationController::class)
+        ->only('show','index');
+    Route::post('/organization/by-address', [OrganizationController::class, 'getByAddress']);
+    Route::post('/organization/by-location', [OrganizationController::class, 'getByLocation']);
 
 });
